# mcp-server-http-streamable

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  server.py
k8s/: 00-namespace.yaml  01-deployment.yaml  02-service.yaml
src/mcpserver/: __init__.py  __main__.py  server.py
